# from-software-archipelago-clients

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ds3-release.yaml  sdt-release.yaml  test.yaml
crates/ds3-archipelago/: CHANGELOG.md  Cargo.toml
crates/ds3-archipelago/release/: README.txt  me3-config.me3
crates/ds3-archipelago/src/: core.rs  lib.rs
crates/sdt-archipelago/: CHANGELOG.md  Cargo.toml
crates/sdt-archipelago/release/: README.txt  me3-config.me3
crates/sdt-archipelago/src/: core.rs  game.rs  item.rs  lib.rs  save_data.rs  slot_data.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  core.rs  error_display.rs  game.rs  lib.rs  overlay.rs  section_profiler.rs  utils.rs
