[package]
name = "sdt-archipelago"
version = "1.0.0-alpha.7"
edition.workspace = true
repository.workspace = true
license.workspace = true
readme = false

[lib]
crate-type = ["cdylib"]
name = "sdt_archipelago"

[dependencies]
anyhow.workspace = true
archipelago_rs.workspace = true
bincode.workspace = true
sekiro = { git = "https://github.com/vswarte/fromsoftware-rs" }
sekiro-extra = { git = "https://github.com/nex3/fromsoftware-extra", branch = "sekiro-save" }
fromsoftware-shared.workspace = true
hudhook.workspace = true
ilhook.workspace = true
json.workspace = true
log.workspace = true
regex-macro.workspace = true
regex.workspace = true
serde.workspace = true
serde_repr.workspace = true
shared.workspace = true
windows.workspace = true

[features]
# Enable runtime profiling
profile = ["shared/profile"]
